# delta_rc_car

./: .gitignore  .gitmodules  README.md
arduino/rc_car_firmware/: communication.cpp  communication.h  rc_car_firmware.ino
delta_joystick/: joystick.py  packet.py  utils.py  wireless_controller.py
delta_optitrack/: CMakeLists.txt  bags  optitrack.rviz  package.xml
delta_optitrack/launch/: display.launch
delta_optitrack/scripts/: radar_scan_bag_converter.py  validation_node.py
delta_perception_rc_car/: CMakeLists.txt  package.xml
delta_perception_rc_car/darknet/: .gitignore  Makefile  darknet.py  darknet_video.py
delta_perception_rc_car/ipm/: calibrate.py  camera_info.yaml  image_points.py  ipm.py  world_points.py
delta_perception_rc_car/launch/: inverse_persepective_mapping.launch  object_detection.launch  play_rosbag.launch  radar_detection.launch
delta_perception_rc_car/scripts/: crop_img.py  cube_marker_publisher.py  data_augmentaion.py  init_paths.py  ipm_node.py  main.py  occupancy_grid.py  radar_detection_node.py  utils.py
delta_perception_rc_car/sort/: data_association.py
delta_perception_rc_car/test/: cluster_test.py  features.py
delta_tracking_fusion_rc_car/: CMakeLists.txt  package.xml  tracking_fusion.rviz
delta_tracking_fusion_rc_car/launch/: delta_tracking.launch
delta_tracking_fusion_rc_car/scripts/: cube_marker_publisher.py  main.py  occupancy_grid.py  tracker.py
pointgrey_calibration/: 16306167.yaml  16306172.yaml  install_calibration.sh
scripts/: record_images.py
ti_mmwave_rospkg/: CMakeLists.txt
(+19 files in other folders)
